@@ -9,6 +9,7 @@ Audio Options
 Resources Options
 Controls Setup
 Advanced Options
+Edit Controls
 
 #(CHOICES)
 Resolution
@@ -31,6 +32,7 @@ Sound Quality
 Slave Shields
 Player One
 Player Two
+Control Set
 
 #(CAT_0_OPTS)
 320x240
@@ -304,80 +306,94 @@ Slave shields pulsate.
 This mimics the 3do verion.
 
 #(CAT_18_OPTS)
-Keyboard #1
-Keyboard #2
-Keyboard #3
-Joystick #1
-Joystick #2
-Joystick #3
+Placeholder
+Placeholder
+Placeholder
+Placeholder
+Placeholder
+Placeholder
 
 #(CAT_18_OPT_0_DESC)
-Player 1 uses the Keyboard 1 template.
 Player 1 controls the bottom player in
 Super Melee, and the entire Full Game.
 
 #(CAT_18_OPT_1_DESC)
-Player 1 uses the Keyboard 2 template.
 Player 1 controls the bottom player in
 Super Melee, and the entire Full Game.
 
 #(CAT_18_OPT_2_DESC)
-Player 1 uses the Keyboard 3 template.
 Player 1 controls the bottom player in
 Super Melee, and the entire Full Game.
 
 #(CAT_18_OPT_3_DESC)
-Player 1 uses the Joystick 1 template.
 Player 1 controls the bottom player in
 Super Melee, and the entire Full Game.
 
 #(CAT_18_OPT_4_DESC)
-Player 1 uses the Joystick 2 template.
 Player 1 controls the bottom player in
 Super Melee, and the entire Full Game.
 
 #(CAT_18_OPT_5_DESC)
-Player 1 uses the Joystick 3 template.
 Player 1 controls the bottom player in
 Super Melee, and the entire Full Game.
 
 #(CAT_19_OPTS)
-Keyboard #1
-Keyboard #2
-Keyboard #3
-Joystick #1
-Joystick #2
-Joystick #3
+Placeholder
+Placeholder
+Placeholder
+Placeholder
+Placeholder
+Placeholder
 
 #(CAT_19_OPT_0_DESC)
-Player 2 uses the Keyboard 1 template.
 Player 2 controls the top player
 in Super Melee.
 
 #(CAT_19_OPT_1_DESC)
-Player 2 uses the Keyboard 2 template.
 Player 2 controls the top player
 in Super Melee.
 
 #(CAT_19_OPT_2_DESC)
-Player 2 uses the Keyboard 3 template.
 Player 2 controls the top player
 in Super Melee.
 
 #(CAT_19_OPT_3_DESC)
-Player 2 uses the Joystick 1 template.
 Player 2 controls the top player
 in Super Melee.
 
 #(CAT_19_OPT_4_DESC)
-Player 2 uses the Joystick 2 template.
 Player 2 controls the top player
 in Super Melee.
 
 #(CAT_19_OPT_5_DESC)
-Player 2 uses the Joystick 3 template.
 Player 2 controls the top player
 in Super Melee.
+
+#(CAT_20_OPTS)
+Placeholder
+Placeholder
+Placeholder
+Placeholder
+Placeholder
+Placeholder
+
+#(CAT_20_OPT_0_DESC)
+Select the control template to edit.
+
+#(CAT_20_OPT_1_DESC)
+Select the control template to edit.
+
+#(CAT_20_OPT_2_DESC)
+Select the control template to edit.
+
+#(CAT_20_OPT_3_DESC)
+Select the control template to edit.
+
+#(CAT_20_OPT_4_DESC)
+Select the control template to edit.
+
+#(CAT_20_OPT_5_DESC)
+Select the control template to edit.
 
 #(SLIDERS)
 Music Volume
@@ -402,6 +418,8 @@ Sound Options
 Resources Options
 Configure Controls
 Advanced Options
+Edit Controls
+Back to Control Select
 
 #(BUTTON_0_DESC)
 Return to the main menu.
@@ -436,9 +454,16 @@ Currently partially implemented.
 Select underlying drivers or other
 hardware-dependent options.
 
+#(BUTTON_8_DESC)
+Edit key control sets.
+
+#(BUTTON_9_DESC)
+Return to control set selection screen.
+
 #(LABELS)
 Incomplete
-Keyconfig incomplete
+Keyconfig header
+Editkey header
 
 #(LABEL_0)
 This part of the configuration
@@ -447,7 +472,14 @@ has not yet been implemented.
 Expect it in a future version.
 
 #(LABEL_1)
-Control templates are currently defined
-in the KEYS.CFG file stored near your
-save games.  A future UQM version will
-offer in-game key configuration.
+To view or edit key controls,
+select the option below:
+
+#(LABEL_2)
+Controls
+
+#(TEXT_ENTRIES)
+Name
+
+#(TEXT_ENTRIES_INITIAL)
+Placeholder
