@@ -20,4 +20,3 @@
 #include "inpintrn.h"
 
 volatile BOOLEAN ExitRequested, GamePaused;
-
